# lunascope

./: README.md  pyproject.toml
docs/: function-overview.md
src/lunascope/: __init__.py  app.py  controller.py  helpers.py
src/lunascope/components/: anal.py  hypno.py  masks.py  metrics.py  plts.py  settings.py  signals.py  slist.py  soappops.py  spectrogram.py  tbl_funcs.py
src/lunascope/ui/: main.ui
