[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lunascope"
version = "0.1.9"
description = "Sleep-EEG viewer and interface to Luna"
readme = "README.md"
requires-python = ">=3.9, <3.14"
license = {file = "LICENSE"}
authors = [
  {name = "Lorcan Purcell", email = "lpurcell26@nmhschool.org"  },
  {name = "Shaun Purcell", email = "smpurcell@bwh.harvard.edu"},
  {name = "Nataliia Kozhemiako", email = "nkozhemiako@bwh.harvard.edu"} ]

dependencies = [
 "lunapi>=1.3.4",
 "PySide6>=6.10.0",  
 "pyqtgraph==0.13.7",
 "numpy",
 "pandas",
 "matplotlib"
]

[project.scripts]
lunascope = "lunascope.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lunascope = ["ui/*.ui"]
